force-app/main/default/objects/sugati__Client_Invoice__c/sugati__Client_Invoice__c.object-meta.xml
<CustomObject>
    <label>Client Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Client Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>