force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Invoices</relationshipLabel>
    <relationshipName>Client_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>