force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Additional_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Additional_Text__c</fullName>
    <label>Additional Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>