force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Additional_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Additional_Value__c</fullName>
    <inlineHelpText>Enter negative number to reduce Total Price and enter positive number to increase Total Price.</inlineHelpText>
    <label>Additional Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>