force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Agent_Commission__c</fullName>
    <description>Locked Agent Commission from Opportunity</description>
    <label>Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>