force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Amount_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Amount_to_be_Paid__c</fullName>
    <description>IF( RecordType.DeveloperName &lt;&gt; &quot;Credit Note&quot;, IF (AND(ATOF__I_Opportunity__r.ATOF__O_Booking_to_Departure__c &lt;= 70, ATOF__I_Opportunity__r.ATOF__O_Outstanding__c &gt; 0),  IF(ISBLANK( ATOF__CI_Client_Group__r.Id ), ATOF__I_Opportunity__r.Amount, ATOF__CI_Client_Group__r.ATOF__CG_Selling_Price__c) ,  IF(ISBLANK( ATOF__CI_Client_Group__r.Id ),  ATOF__I_Opportunity__r.ATOF__O_Deposit_Required__c ,  ATOF__I_Total_Price_CG__c ) ), 0)</description>
    <formula>IF( RecordType.DeveloperName &lt;&gt; &quot;Credit Note&quot;, IF (AND(sugati__I_Opportunity__r.sugati__O_Booking_to_Departure__c &lt;= 70, sugati__I_Opportunity__r.sugati__O_Outstanding__c &gt; 0), IF(ISBLANK( sugati__CI_Client_Group__r.Id ), sugati__I_Opportunity__r.Amount, sugati__CI_Client_Group__r.sugati__CG_Selling_Price__c) , IF(ISBLANK( sugati__CI_Client_Group__r.Id ), sugati__I_Opportunity__r.sugati__O_Deposit_Required1__c , sugati__I_Total_Price_CG__c ) ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>