force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Client_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Client_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this is a credit note, this field must be filled in.</description>
    <inlineHelpText>If this is a credit note, this field must be filled in.</inlineHelpText>
    <label>Client Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Client_Invoice__c.sugati__I_Opportunity__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.sugati__I_Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Client_Invoice__c</referenceTo>
    <relationshipLabel>Client Invoices</relationshipLabel>
    <relationshipName>Client_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>