force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>sugati__Client_Invoice__c</referenceTo>
    <relationshipLabel>Client Invoices (Credit Note)</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>