force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Deposit_Due_Date__c</fullName>
    <label>Deposit Due Date</label>
    <type>Date</type>
</CustomField>