force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Deposit_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Deposit_Overwrite__c</fullName>
    <formula>sugati__CI_Client_Group__r.sugati__CG_Deposit_Overwrite__c</formula>
    <label>Deposit Overwrite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>