force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Invoice_Committed_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Invoice_Committed_Date__c</fullName>
    <label>Invoice Committed Date</label>
    <type>DateTime</type>
</CustomField>