force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>