force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>