force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Invoice_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Invoice_Types__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Supplementary</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>