force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Opportunity_Amount__c</fullName>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>