force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Payment_Received_Pdf__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Payment_Received_Pdf__c</fullName>
    <description>Copy the value from I_Payment_Received__c when Invoice Status changes to &apos;Committed&apos;</description>
    <label>Payment Received (PDF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>