force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Payment_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Payment_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Client Invoices</relationshipLabel>
    <relationshipName>Client_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>