force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Proforma_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Proforma_Invoice_Date__c</fullName>
    <label>Proforma Invoice Date</label>
    <type>Date</type>
</CustomField>