force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Proforma_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Proforma_Type__c</fullName>
    <label>Proforma Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>