force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Profroma_sequential_Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Profroma_sequential_Invoice_number__c</fullName>
    <label>Profroma sequential Invoice number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>