force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Total_Marked_Up_Cost_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Total_Marked_Up_Cost_Selling_Price__c</fullName>
    <description>Locked Total Marked Up Cost (Selling Price) from Opportunity</description>
    <label>Total Marked Up Cost (Selling Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>