force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CI_Total_Price_Pdf__c.field-meta.xml
<CustomField>
    <fullName>sugati__CI_Total_Price_Pdf__c</fullName>
    <description>Copy the value from I_Total_Price__c when Invoice Status changes to &apos;Committed&apos;</description>
    <label>Total Price (PDF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>