force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__CL_Opportunity_Locked__c.field-meta.xml
<CustomField>
    <fullName>sugati__CL_Opportunity_Locked__c</fullName>
    <formula>sugati__I_Opportunity__r.sugati__O_Lock__c</formula>
    <label>Opportunity Locked</label>
    <type>Checkbox</type>
</CustomField>