force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>