force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Final_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Final_Payment_Due__c</fullName>
    <formula>sugati__I_Opportunity__r.sugati__O_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Payment Due</label>
    <type>Date</type>
</CustomField>