force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>