force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>