force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Client Invoices</relationshipLabel>
    <relationshipName>Client_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>