force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Payment_Received__c</fullName>
    <formula>IF(ISBLANK( sugati__CI_Client_Group__r.Id ), sugati__I_Opportunity__r.sugati__O_Total_Payment1__c-sugati__I_Opportunity__r.sugati__O_Total_Credit_Card_Charges__c,  sugati__I_Payment_Received_CG__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>