force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Payment_Received_CG__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Payment_Received_CG__c</fullName>
    <label>Payment Received CG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>