force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Total_Price__c</fullName>
    <description>IF(AND(RecordType.Name != &apos;Deposit&apos;,OR(TEXT(CI_Proforma_Type__c)=&apos;Committed&apos;,ISBLANK(TEXT(CI_Proforma_Type__c)))) ,IF(ISBLANK( CI_Client_Group__r.Id ), I_Opportunity__r.Amount, CI_Client_Group__r.CG_Selling_Price__c), IF(ISBLANK( CI_Client_Group__r.Id ), I_Opportunity__r.O_Deposit_Required1__c , I_Total_Price_CG__c ))</description>
    <formula>IF(ISBLANK(sugati__CI_Client_Group__r.Id), 
    sugati__I_Opportunity__r.Amount, 
    IF(ISBLANK(sugati__I_Opportunity__r.sugati__O_Tour__c), 
        IF(NOT(ISBLANK(sugati__CI_Client_Group__r.sugati__CG_Selling_Price__c)), 
            sugati__CI_Client_Group__r.sugati__CG_Selling_Price__c,
            sugati__CI_Client_Group__r.sugati__S_CG_Total_Group_Net_Sell_Price__c
        ),
        IF(NOT(ISBLANK(sugati__CI_Client_Group__r.sugati__CG_Selling_Price__c)), 
            sugati__CI_Client_Group__r.sugati__CG_Selling_Price__c,
            IF(NOT(ISBLANK(sugati__CI_Client_Group__r.sugati__S_CG_Total_Group_Net_Sell_Price__c)), 
                sugati__CI_Client_Group__r.sugati__S_CG_Total_Group_Net_Sell_Price__c,
                sugati__CI_Client_Group__r.sugati__CG_Total_Tour_Cost_in_Booking_Currency__c
            )
        )
    )
)</formula>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>