force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__I_Total_Price_CG__c.field-meta.xml
<CustomField>
    <fullName>sugati__I_Total_Price_CG__c</fullName>
    <label>Total Price CG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>