force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__Invoice_PDF_Page_Break__c.field-meta.xml
<CustomField>
    <fullName>sugati__Invoice_PDF_Page_Break__c</fullName>
    <label>Invoice PDF Page Break</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>