force-app/main/default/objects/sugati__Client_Invoice__c/fields/sugati__Remarks__c.field-meta.xml
<CustomField>
    <fullName>sugati__Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>