force-app/main/default/objects/sugati__Client_Invoice__c/recordTypes/sugati__Committed.recordType-meta.xml
<RecordType>
    <fullName>sugati__Committed</fullName>
    <active>true</active>
    <description>Committed Invoice</description>
    <label>Committed</label>
</RecordType>