force-app/main/default/objects/sugati__Client_Invoice__c/recordTypes/sugati__Credit_Note.recordType-meta.xml
<RecordType>
    <fullName>sugati__Credit_Note</fullName>
    <active>true</active>
    <description>Credit Note</description>
    <label>Credit Note</label>
</RecordType>