force-app/main/default/objects/sugati__Client_Invoice__c/recordTypes/sugati__Invoice.recordType-meta.xml
<RecordType>
    <fullName>sugati__Invoice</fullName>
    <active>true</active>
    <description>New record type which is used in Sugati Invoice Page</description>
    <label>Invoice</label>
</RecordType>