force-app/main/default/objects/sugati__Client_Invoice__c/recordTypes/sugati__Proforma.recordType-meta.xml
<RecordType>
    <fullName>sugati__Proforma</fullName>
    <active>true</active>
    <description>This is a Proforma Invoice</description>
    <label>Proforma Invoice</label>
</RecordType>