force-app/main/default/objects/sugati__Client_Invoice__c/validationRules/sugati__Validation_for_deposit_invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>sugati__Validation_for_deposit_invoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Deposit&apos;, !sugati__I_Opportunity__r.sugati__O_Payment_Rule__r.sugati__R_Deposit_Only__c)</errorConditionFormula>
    <errorMessage>You can&apos;t create deposit invoice for this opportunity, please contact to your admin.</errorMessage>
</ValidationRule>